--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: qtvirtualkeyboard
 Section: main
 Priority: optional
 Maintainer: Robert Hedges <rhedges@truefitness.com>
-Build-Depends: debhelper (>= 9), cdbs, qtbase5-dev
+Build-Depends: debhelper (>= 9), cdbs, qtbase5-dev, qtdeclarative5-dev, qtbase5-private-dev, libqt5svg5-dev
 Standards-Version: 3.9.8
 Vcs-Git: https://github.com/truefitness/qtvirtualkeyboard
 
